fix: fix UI squashing for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,7 @@
     transform: rotate(360deg);
   }
 }
+
+.ant-slider-rail{
+  background-color: rgba(255, 255, 255, 0.25) !important; 
+}
